[tool]
[tool.poetry]
name = "vsot"
version = "0.1.4"
description = "VSOT - Django/jinja template formatter"
license = "MIT license"
keywords = ["vsot"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Natural Language :: English", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8"]
homepage = "https://github.com/benhowes/vsot"
authors = ["Ben Howes <ben@ben-howes.co.uk>"]
readme = "README.rst"

[tool.poetry.scripts]
vsot = "vsot.cli:main"

[tool.poetry.dependencies]
python = ">=3.7"
click = "*"
antlr4-python3-runtime = "*"
pathspec = "*"

[tool.poetry.dev-dependencies]
pre-commit = "*"
black = "*"
isort = "*"
bump2version = "*"
watchdog = "*"
flake8 = "*"
tox = "*"
coverage = "*"
pytest = "*"
ipdb = "*"
readme_renderer = "*"


[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup
  | vsot/antlr
)/
'''

[tool.vsot]
indent_size = 2
